--- a/Docker/Rabbitmq/.dockerignore
+++ b/Docker/Rabbitmq/.dockerignore
@@ -30,6 +30,8 @@ README.md
 **/.idea
 **/.idea/workspace.xml
 **/.DS_Store
+**/.classpath
+
 # Alternative approach first ignore everything uncomment nextline
 #*
 # explictly add exceptions for required files/paths
