--- a/Docker/Rabbitmq/docker-compose.yml
+++ b/Docker/Rabbitmq/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   # https://hub.docker.com/_/rabbitmq
   rabbit:
-    image: rabbit:3.12.2
+    image: ${DOCKER_REGISTRY-}rabbit:3.12.2
     build:
       context: ./image/
     container_name: rabbit
