--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   # https://hub.docker.com/_/rabbitmq
   rabbit:
-    image: rabbit:3.12.2
+    image: ${DOCKER_REGISTRY-}rabbit:3.12.2
     build:
       context: ./Rabbitmq/image/
     container_name: rabbit
