--- a/Docker/Graylog/docker-compose.yml
+++ b/Docker/Graylog/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
+name: drn-graylog
 services:
   # https://github.com/Graylog2/docker-compose/blob/main/open-core/docker-compose.yml
   # https://hub.docker.com/_/mongo/
   mongodb:
     image: "mongo:5.0.20"
-    container_name: mongo
+    container_name: drn-mongo
     volumes:
       - "mongodb_data:/data/db"
     restart: "on-failure"
@@ -16,7 +17,7 @@ services:
   # https://hub.docker.com/r/opensearchproject/opensearch
   opensearch:
     image: "opensearchproject/opensearch:2.8.0"
-    container_name: opensearch
+    container_name: drn-opensearch
     environment:
       - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
       - "bootstrap.memory_lock=true"
@@ -42,7 +43,7 @@ services:
   graylog:
     hostname: "server"
     image: "${GRAYLOG_IMAGE:-graylog/graylog:5.1.4}"
-    container_name: graylog
+    container_name: drn-graylog
     depends_on:
       opensearch:
         condition: "service_started"
