--- a/Docker/Postgre/docker-compose.yml
+++ b/Docker/Postgre/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
-
+name: drn-postgre
 services:
   # https://hub.docker.com/_/postgres
   postgre:
     image: postgres:15.4-alpine3.18
-    container_name: postgre
+    container_name: drn-postgre
     restart: unless-stopped
     volumes:
       - postgre-data:/data/postgres
