--- a/Docker/Graylog/docker-compose.yml
+++ b/Docker/Graylog/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: "mongo:5.0.20"
     container_name: drn-mongo
     volumes:
-      - "mongodb_data:/data/db"
+      - "drn-mongodb-data:/data/db"
     restart: "on-failure"
     deploy:
       resources:
@@ -36,7 +36,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - "os_data:/usr/share/opensearch/data"
+      - "drn-os-data:/usr/share/opensearch/data"
     restart: "on-failure"
 
   # https://hub.docker.com/r/graylog/graylog/
@@ -72,12 +72,12 @@ services:
     - "13301:13301/tcp" # Forwarder data
     - "13302:13302/tcp" # Forwarder config
     volumes:
-      - "graylog_data:/usr/share/graylog/data/data"
-      - "graylog_journal:/usr/share/graylog/data/journal"
+      - "drn-graylog-data:/usr/share/graylog/data/data"
+      - "drn-graylog-journal:/usr/share/graylog/data/journal"
     restart: "on-failure"
 # see https://docs.docker.com/engine/admin/volumes/volumes/
 volumes:
-  mongodb_data:
-  os_data:
-  graylog_data:
-  graylog_journal:
+  drn-mongodb-data:
+  drn-os-data:
+  drn-graylog-data:
+  drn-graylog-journal:
