--- a/Docker/Postgre/docker-compose.yml
+++ b/Docker/Postgre/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: drn-postgre
     restart: unless-stopped
     volumes:
-      - postgre-data:/data/postgres
+      - drn-postgre-data:/data/postgres
     ports:
       - "5432:5432"
     environment:
@@ -16,4 +16,4 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-drn}
       PGDATA: ${PGDATA:-/data/postgres}
 volumes:
-  postgre-data:
+  drn-postgre-data:
