--- a/Sample.Hosted/Properties/launchSettings.json
+++ b/Sample.Hosted/Properties/launchSettings.json
@@ -1,41 +1,30 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:56375",
-      "sslPort": 44393
-    }
-  },
+  "doc": "https://github.com/dotnet/docs/issues/34726",
   "profiles": {
-    "http": {
+    "Kestrel": {
+      "doc": "https://learn.microsoft.com/en-us/aspnet/core/fundamentals/environments",
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5182",
+      "applicationUrl": "https://localhost:5999;",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true
-    },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7056;http://localhost:5182",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTPS_PORT": "5999"
       }
+    },
+    "Docker": {
+      "doc": "https://learn.microsoft.com/en-us/visualstudio/containers/container-launch-settings - not supported in rider yet",
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTPS_PORT": "5999"
+      },
+      "httpPort": 5999,
+      "useSSL": true,
+      "sslPort": 5999
     }
   }
 }
