--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,6 @@ services:
       - "5999:5999/tcp"
     volumes:
       - ~/.aspnet/https:/https #map certificates
+      #- %USERPROFILE%\.aspnet\https:/https  #map certificates for windows
       - ~/.microsoft/usersecrets:/home/app/.microsoft/usersecrets #map secrets for linux & macos
       #- %APPDATA%\Microsoft\UserSecrets:/home/app/.microsoft/usersecrets  #map secrets for windows
