--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,13 +1,13 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: master
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master", "develop" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -25,4 +25,4 @@ jobs:
       - name: Build
         run: dotnet build DRN.sln --no-restore
       - name: Test
-        run: dotnet test DRN.sln --no-build --verbosity normal
+        run: dotnet test DRN.Test/DRN.Test.csproj --no-build --verbosity normal
