coverlet install step is separated since workflow cache is not working on it

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -52,6 +52,8 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Install Coverlet
+        run: |
           dotnet tool install --global coverlet.console
       - name: Build and analyze
         env:
