--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -1,7 +1,8 @@
+name: release-preview
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+-preview[0-9][0-9][0-9]"
+      - v[0-9]+.[0-9]+.[0-9]+-preview[0-9][0-9][0-9]
 jobs:
   Publish-Develop:
     runs-on: ubuntu-latest
