--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 # https://github.com/acraven/blog-nuget-workflow-github-actions/blob/main/.github/workflows/release.yml
+name: release
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
+      - v[0-9]+.[0-9]+.[0-9]+
 jobs:
   Publish-Master:
     runs-on: ubuntu-latest
