--- a/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
+++ b/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
@@ -1,20 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <Authors>Duran Serkan KILIÇ</Authors>
-    <Product>DRN.Framework.SharedKernel</Product>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <Authors>Duran Serkan KILIÇ</Authors>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageId>DRN.Framework.SharedKernel</PackageId>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <PackageId>DRN.Framework.SharedKernel</PackageId>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/duranserkan/DRN-Project</RepositoryUrl>
-  </PropertyGroup>
+    <ItemGroup>
+        <None Update="README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
 
+    <Target Name="PrepareReleaseNotes" BeforeTargets="GenerateNuspec">
+        <PropertyGroup>
+            <PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/../RELEASE-NOTES"))</PackageDescription>
+        </PropertyGroup>
+    </Target>
 
 </Project>
