--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -29,10 +29,15 @@ jobs:
         run: dotnet build DRN.sln --configuration Release /p:Version=${VERSION} --no-restore
       - name: Test
         run: dotnet test DRN.Test/DRN.Test.csproj --configuration Release /p:Version=${VERSION} --no-build --verbosity normal
-      - name: Pack
-        run: dotnet pack DRN.sln --configuration Release /p:Version=${VERSION} --no-build --output .
-      - name: Push
+      - name: Push SharedKernel
         run: |
+          dotnet pack DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
           dotnet nuget push DRN.Framework.SharedKernel.${VERSION}.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+      - name: Push Utils
+        run: |
+          dotnet pack DRN.Framework.Utils/DRN.Framework.Utils.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
           dotnet nuget push DRN.Framework.Utils.${VERSION}.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+      - name: Push Testing
+        run: |
+          dotnet pack DRN.Framework.Testing/DRN.Framework.Testing.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
           dotnet nuget push DRN.Framework.Testing.${VERSION}.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
