--- a/DRN.Framework.File/DRN.Framework.File.csproj
+++ b/DRN.Framework.File/DRN.Framework.File.csproj
@@ -26,7 +26,7 @@
 
     <Target Name="PrepareDescription" BeforeTargets="GenerateNuspec">
         <PropertyGroup>
-            <PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/PackageDescription"))</PackageDescription>
+            <PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/PACKAGE-DESCRIPTION"))</PackageDescription>
         </PropertyGroup>
     </Target>
 
