--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,24 +31,21 @@ jobs:
         run: dotnet test ${ProjectName}/${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --verbosity normal
         env:
           ProjectName: DRN.Test
-      - name: Push SharedKernel
-        run: |
-          git --no-pager log -1 --format="%n%an,  %ai, %C(auto)%H"  >>  ${ProjectName}/PACKAGE-DESCRIPTION
-          dotnet pack ${ProjectName}/${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push ${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
-        env:
-          ProjectName: DRN.Framework.SharedKernel
-      - name: Push Utils
-        run: |
-          git --no-pager log -1 --format="%n%an,  %ai, %C(auto)%H"  >>  ${ProjectName}/PACKAGE-DESCRIPTION
-          dotnet pack ${ProjectName}/${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push ${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
-        env:
-          ProjectName: DRN.Framework.Utils
-      - name: Push Testing
-        run: |
-          git --no-pager log -1 --format="%n%an,  %ai, %C(auto)%H"  >>  ${ProjectName}/PACKAGE-DESCRIPTION
-          dotnet pack ${ProjectName}/${ProjectName}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
-          dotnet nuget push ${ProjectName}.${VERSION}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
-        env:
-          ProjectName: DRN.Framework.Testing
+      - name: Publish SharedKernel
+        uses: ./.github/workflows/actions/nuget-publish.yml
+        with:
+          project-name: DRN.Framework.SharedKernel
+          project-version: ${VERSION}
+          token: ${{ secrets.NUGET_TOKEN }}
+      - name: Publish Utils
+        uses: ./.github/workflows/actions/nuget-publish.yml
+        with:
+          project-name: DRN.Framework.Utils
+          project-version: ${VERSION}
+          token: ${{ secrets.NUGET_TOKEN }}
+      - name: Publish Testing
+        uses: ./.github/workflows/actions/nuget-publish.yml
+        with:
+          project-name: DRN.Framework.Utils
+          project-version: ${VERSION}
+          token: ${{ secrets.NUGET_TOKEN }}
