--- a/.github/workflows/actions/nuget-publish/action.yml
+++ b/.github/workflows/actions/nuget-publish/action.yml
@@ -13,8 +13,8 @@ runs:
       shell: bash
       run: |
         git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/PACKAGE-DESCRIPTION
-        git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/README.md
-        git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
+        git --no-pager log -1 --format="<br><br>Author, date, commit hash:%n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/README.md
+        git --no-pager log -1 --format="<br><br>Author, date, commit hash:<br>%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
         dotnet pack ${{ inputs.project-name }}/${{ inputs.project-name }}.csproj --configuration Release /p:Version=${{ inputs.project-version }} --no-build --output .
     - name: Push
       shell: bash
