--- a/.github/workflows/actions/nuget-publish/action.yml
+++ b/.github/workflows/actions/nuget-publish/action.yml
@@ -2,10 +2,6 @@ name: Nuget Publish
 inputs:
   project-name:
     required: true
-  project-version:
-    required: true
-  token:
-    required: true
 runs:
   using: "composite"
   steps:
@@ -13,10 +9,10 @@ runs:
       shell: bash
       run: |
         git --no-pager log -1 --format="%n%nAuthor, date, commit hash:%n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/PACKAGE-DESCRIPTION
-        git --no-pager log -1 --format="  %n  %nAuthor, date, commit hash:  %n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/README.md
-        git --no-pager log -1 --format="  %n  %nAuthor, date, commit hash:  %n%an,  %ai, %C(auto)%H"  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
-        dotnet pack ${{ inputs.project-name }}/${{ inputs.project-name }}.csproj --configuration Release /p:Version=${{ inputs.project-version }} --no-build --output .
+        git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H"  >>  ${{ inputs.project-name }}/README.md
+        git --no-pager log -1 --format="  %n  %n### Commit Info  %nAuthor: %an  %nDate: %ai  %nHash: %C(auto)%H"  >>  ${{ inputs.project-name }}/RELEASE-NOTES.md
+        dotnet pack ${{ inputs.project-name }}/${{ inputs.project-name }}.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
     - name: Push
       shell: bash
       run: |
-        dotnet nuget push ${{ inputs.project-name }}.${{ inputs.project-version }}.nupkg --skip-duplicate --api-key ${{ inputs.token }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push ${{ inputs.project-name }}.${VERSION}.nupkg --skip-duplicate --api-key ${NUGET_TOKEN} --source https://api.nuget.org/v3/index.json
