--- a/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
+++ b/DRN.Framework.SharedKernel/DRN.Framework.SharedKernel.csproj
@@ -24,6 +24,10 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
     <Target Name="PrepareDescription" BeforeTargets="GenerateNuspec">
         <PropertyGroup>
             <PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/PACKAGE-DESCRIPTION"))</PackageDescription>
