DRN.Framework Readme updates and code refactors before the version release

--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -15,13 +15,16 @@
     <ItemGroup>
         <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj"/>
     </ItemGroup>
-
+    
     <ItemGroup>
-        <None Update="Settings\appsettings.json">
+        <None Update="Settings\defaultAppSettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="Data\Test.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Settings\secondaryAppSettings.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
