--- a/DRN.Nexus.Utils/DRN.Nexus.Utils.csproj
+++ b/DRN.Nexus.Utils/DRN.Nexus.Utils.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DRN.Framework.Utils\DRN.Framework.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
