--- a/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
+++ b/DRN.Nexus.Hosted/DRN.Nexus.Hosted.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DRN.Nexus.Application\DRN.Nexus.Application.csproj" />
+    <ProjectReference Include="..\DRN.Nexus.Infra\DRN.Nexus.Infra.csproj" />
+  </ItemGroup>
 
 </Project>
