Framework utils readme.md updates

--- a/DRN.Test/DRN.Test.csproj
+++ b/DRN.Test/DRN.Test.csproj
@@ -14,6 +14,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\DRN.Framework.Testing\DRN.Framework.Testing.csproj"/>
+        <ProjectReference Include="..\DRN.Nexus.Application\DRN.Nexus.Application.csproj" />
+        <ProjectReference Include="..\Sample.Application\Sample.Application.csproj" />
     </ItemGroup>
     
     <ItemGroup>
