--- a/DRN.Nexus.Application/DRN.Nexus.Application.csproj
+++ b/DRN.Nexus.Application/DRN.Nexus.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DRN.Nexus.Infra\DRN.Nexus.Infra.csproj" />
     <ProjectReference Include="..\DRN.Nexus.Utils\DRN.Nexus.Utils.csproj" />
   </ItemGroup>
 
